@@ -56,6 +56,21 @@ is_deeply(
 		['d', 'box-sizing', 'border-box'],
 		['e'],
 
+		['s', 'input[type=button]'],
+		['d', 'width', '100%'],
+		['d', 'background-color', '#4CAF50'],
+		['d', 'color', 'white'],
+		['d', 'padding', '14px 20px'],
+		['d', 'margin', '8px 0'],
+		['d', 'border', 'none'],
+		['d', 'border-radius', '4px'],
+		['d', 'cursor', 'pointer'],
+		['e'],
+
+		['s', 'input[type=button]:hover'],
+		['d', 'background-color', '#45a049'],
+		['e'],
+
 		['s', '.required'],
 		['d', 'color', 'red'],
 		['e'],
@@ -109,6 +124,21 @@ is_deeply(
 		['d', 'border', '1px solid #ccc'],
 		['d', 'border-radius', '4px'],
 		['d', 'box-sizing', 'border-box'],
+		['e'],
+
+		['s', 'input.form-input[type=button]'],
+		['d', 'width', '100%'],
+		['d', 'background-color', '#4CAF50'],
+		['d', 'color', 'white'],
+		['d', 'padding', '14px 20px'],
+		['d', 'margin', '8px 0'],
+		['d', 'border', 'none'],
+		['d', 'border-radius', '4px'],
+		['d', 'cursor', 'pointer'],
+		['e'],
+
+		['s', 'input.form-input[type=button]:hover'],
+		['d', 'background-color', '#45a049'],
 		['e'],
 
 		['s', '.form-input-required'],
